--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <%#= render partial: 'layouts/header'%>
+    <%= render partial: 'layouts/header'%>
     <div class="container">
-      <%#= render partial: 'layouts/flash' %>
+      <%= render partial: 'layouts/flash' %>
       <%= yield %>
     </div>
   </body>
