--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body data-current-user="<%= current_user&.username -%>">
     <%= render partial: 'layouts/header'%>
     <div class="container">
       <div class="row">
