--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
   </a>
   <div class="actions">
     <% unless signed_in? %>
-      <%= form_for(User.new, as: :user, url: user_session_path(:user), html: {class: 'form-inline form-signin-signup'}) do |f| %>
+      <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
           <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: 'username', class: 'form-control' %>
           <%= f.password_field :password, autocomplete: "current-password", placeholder: 'password', class: 'form-control' %>
           <%= f.submit "Login", class: 'btn btn-primary' %>
@@ -16,6 +16,7 @@
       <span class='welcome'>Welcome <%= current_user.username %></span>
       <%#= link_to "Share a movie", new_video_path, class: 'btn btn-success' %>
       <%#= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete}, class: 'btn btn-danger' %>
+      <div id="share-movie"><div/>
       <%= button_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
     <% end %>
   </div>
